fix "Global Footer" top whitespace
"Global Footer" top whitespace should be kept regardless of whether `[role="complementary"]` is there or not.

--- a/_global-footer.scss
+++ b/_global-footer.scss
@@ -1,5 +1,6 @@
 // Global Footer
 [role="contentinfo"] {
+  margin-top: $margin-heading;
   padding-bottom: $margin-default;
   background-color: $color-bg-global-footer;
 
