--- a/_global-subcontent.scss
+++ b/_global-subcontent.scss
@@ -2,7 +2,6 @@
 [role="complementary"] {
   margin-right: auto;
   margin-left: auto;
-  margin-bottom: $margin-heading;
   padding-right: $width-gap;
   padding-left: $width-gap;
   max-width: $width-content;
